--- a/templates/indix.html
+++ b/templates/indix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Marks pred</title>
+	<title>Diabetes Prediction</title>
 	<style>
 		input[type=text], input[type=number] {
     width: 80%;
@@ -99,9 +99,9 @@ img{
 
 
 {% if predicted == '1' %}
-<h1><marquee direction = "right">You have been predicted as a positive for diabetes</marquee></h1>
+<h1><marquee direction = "left">You have been predicted as a positive for diabetes</marquee></h1>
 {% elif predicted == '0'  %}
-<h1><marquee direction = "right">Result is Negative</marquee> </h1>
+<h1><marquee direction = "left">Result is Negative</marquee> </h1>
 {% endif %}
 
 
